Bug 266661 URLs from ZipBundleEntry.getLocalURL() cannot be decomposed on Win32